# bytestring

./: .darcs-boring  .gitignore  INTEGRATING-blaze-builder  LICENSE  REVIEW_builder.txt  TODO  bytestring.cabal  new-bytestring.cabal
Codec/Bounded/Encoding/: Bench.hs  Floating.hs  Internal.hs  Word.hs
Codec/Bounded/Encoding/Internal/: Base16.hs  Region.hs  Test.hs  UncheckedShifts.hs
Data/: ByteString.hs
Data/ByteString/: Builder.hs  Char8.hs  Internal.hs  Lazy.hs  Put.hs
Data/ByteString/Builder/: ASCII.hs  ByteString.hs  Char.hs  Extra.hs  Int.hs  Internal.hs  Prim.hs  Unsafe.hs  Word.hs  Write.hs
Data/ByteString/Builder/Char/: Ascii.hs  Utf8.hs
Data/ByteString/Builder/Internal/: Buffer.hs
Data/ByteString/Builder/Prim/: ASCII.hs  Binary.hs  Internal.hs
Data/ByteString/Lazy/: Builder.hs  Char8.hs  Internal.hs  Put.hs
Data/ByteString/Lazy/Builder/: ASCII.hs  BasicEncoding.hs  BoundedEncoding.hs  ByteString.hs  Extras.hs  Floating.hs  Int.hs  Internal.hs  Put.hs  Transformers.hs  Unsafe.hs  Utf8.hs  Word.hs  Write.hs
Data/ByteString/Lazy/Builder/BasicEncoding/: ASCII.hs  Binary.hs  Extras.hs  Internal.hs  Utf8.hs
Data/ByteString/Lazy/Builder/BasicEncoding/Internal/: Base16.hs  Floating.hs  UncheckedShifts.hs
Data/ByteString/Lazy/Builder/BoundedEncoding/: Utf8.hs
Data/ByteString/Lazy/Builder/BoundedEncoding/Internal/: Floating.hs
Data/ByteString/Lazy/Builder/Char/: Ascii.hs  Utf8.hs
bench/: .gitignore  BenchAll.hs  BenchFloatDec.hs  BoundsCheckFusion.hs  BuilderRegression.hs  CSV.hs  Makefile  Regression.hs  bench-bytestring-builder.cabal
cbits/: fpstring.c  itoa.c  varint.c
experimental/: ChunkingEncoding.hs  FURTHER_BUILDER_PLANS.txt
include/: fpstring.h
new_tests/: Chunking_tmp.hs  bytestring-testsuite.cabal  runAndTestCoverage.sh
new_tests/suite/: TestSuite.hs
new_tests/suite/Data/ByteString/Lazy/Builder/: Tests.hs
new_tests/suite/Data/ByteString/Lazy/Builder/BasicEncoding/: OldTests.hs  TestUtils.hs  Tests.hs
old_code/: Ascii.hs  Buffer.hs  ByteString.hs  Encoding.hs  Int.hs  Regression.hs
old_code/Codec/Bounded/Encoding/: Int.hs  Word.hs
tests/: .gitignore  TestFramework.hs
tests/builder/: CSV.hs  DumbPutTest.hs  EncodingListFusion.hs  Makefile  Regression.hs  TestAll.hs  TestSuite.hs  Test_RewriteFoldr.hs  WordSizeInBits.hs  Write.hs  WriteListFusion.hs
tests/builder/Data/ByteString/Builder/: Tests.hs
tests/builder/Data/ByteString/Builder/Prim/: TestUtils.hs  Tests.hs
tests/builder/Data/ByteString/Lazy/Builder/: Tests.hs
tests/builder/Data/ByteString/Lazy/Builder/BasicEncoding/: TestUtils.hs  Tests.hs
